Update timeline.js and fix issue with navigation button alignment (was race issue caused by CSS library loading after JS)

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -4,11 +4,11 @@
 @import url(//fonts.googleapis.com/css?family=Lato:900,400);
 
 /* Fonts */
-.heading_font, .tl-timeline h2.tl-headline, article.page .tl-message-content { font-family: 'Lato', Arial, sans-serif !important; }
+.heading_font { font-family: 'Lato', Arial, sans-serif !important; }
 .heading_font b, .heading_font strong { font-weight: 900; }
 .heading_weight { font-weight: 900; }
-.body_font, .tl-timeline div.tl-text-content, article.page .tl-message-full .tl-message-container .tl-message-content { font-family: Georgia, Times, serif !important; }
-.caption_font, .tl-timeline { font-family: 'Lato', Arial, sans-serif !important; }
+.body_font { font-family: Georgia, Times, serif !important; }
+.caption_font { font-family: 'Lato', Arial, sans-serif !important; }
 .caption_font b, .caption_font strong { font-weight: 900; }
 .monospace_font { font-family: Courier, monospace; }
 
@@ -638,7 +638,6 @@ a:hover { text-decoration: underline; }
 }
 
 .wrapped_slot.full_width>.mediaelement, .wrapped_slot.full_widget>.widgetContainer{
-	margin: 0;
 	margin-top: 1rem;
 }
 
@@ -889,7 +888,7 @@ audio::-webkit-media-controls-enclosure { max-width: 100%; /* removes chrome's m
 	display: inline-block;
 }
 
-a.nav_btn,article.page .tl-message-full .tl-message-container .tl-message-content .tl-button {
+a.nav_btn {
 	padding: 1rem;
 	text-decoration: none;
 	background-color: #ddd;
