--- a/system/application/views/melons/cantaloupe/css/widgets.css
+++ b/system/application/views/melons/cantaloupe/css/widgets.css
@@ -19,15 +19,7 @@
 	background-color: #fff;
 	margin-bottom: 2.4rem;
 }
-.widget_slot .tl-slider-container-mask{
-	-webkit-transition: background-color .5s linear;
-	-moz-transition: background-color .5s linear;
-	-ms-transition: background-color .5s linear;
-	-o-transition: background-color .5s linear;
-	transition: background-color .5s linear;
-	background-color: transparent;
-}
-.widget_slot .widgetContainer.highlighted, .widget_slot .widgetContainer.highlighted .tl-slider-container-mask{
+.widget_slot .widgetContainer.highlighted{
 	background-color: rgba(197,220,235,.5);
 }
 .vis_widget {
@@ -266,29 +258,6 @@ div[data-widget=card] h4 { margin-top: 0; margin-bottom: 1.2rem; }
   list-style: none;
 }
 
-.tl-timeline, .tl-timeline div{
-	webkit-box-sizing: content-box;
-	moz-box-sizing: content-box;
-	box-sizing: content-box;
-}
-.tl-headline-date, .tl-headline{
-	padding: 0px;
-}
-.tl-slide-media-only .tl-slide-content-container .tl-slide-content .tl-text{
-	text-align: left !important;
-}
-.tl-slidenav-previous .tl-slidenav-content-container{
-	padding-left: 1rem;
-}
-.tl-slidenav-next .tl-slidenav-content-container{
-	margin-left: -1rem;
-}
-.timeline_embed.maximized-embed{
-	border-top: 1rem solid #f5f5f5;
-	border-bottom: .5rem solid #f5f5f5;
-}
-
-
 .cardContainer{
 	box-shadow: 0;
 	padding: 0;
@@ -325,11 +294,7 @@ div[data-widget=card] h4 { margin-top: 0; margin-bottom: 1.2rem; }
 .media-body h4{
 	margin-top: -4px;
 }
-.widget_slot .tl-layout-portrait .tl-storyslider{
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-}
+
 .widgetContainer .carousel{
     background-color: #444;
 }
@@ -355,7 +320,4 @@ div[data-widget=card] h4 { margin-top: 0; margin-bottom: 1.2rem; }
 .widget_slot.grid_visualization>.well .scalarvis, .widget_slot.radial_visualization>.well .scalarvis{
     padding-right: 20px;
     box-sizing: content-box;
-}
-.widget_timeline .tl-timeline{
-  background-color: #eee;
 }
